# supply-planner

./: .gitignore  .pylintrc  DJANGO_IMPORT_ERROR_RESOLVED.md  README.md  STRUCTURE_REFACTORING.md  TEST_CONFIGURATION.md  TEST_RESOLUTION.md  VS_CODE_TEST_TROUBLESHOOTING.md  conftest.py  manage.py  package.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  tailwind.config.js
app/: admin.py  forms.py  models.py  tests.py  urls.py
app/helpers/: context.py  todo.py  utils.py
app/management/commands/: create_sample_products.py  generate_demo_data.py  test_suppliers.py
app/migrations/: 0001_initial.py  0002_alter_product_options_and_more.py  0002_product_average_daily_purchase_product_lead_time.py  0003_product_model_alter_product_code.py  0003_remove_product_suppliers_supplier_products.py  0003_rename_is_live_to_is_active.py  0004_dailymetrics.py  0004_product_moq.py  0005_alter_product_moq.py  0005_remove_product_average_daily_purchase_and_more.py  0006_remove_dailymetrics_app_dailyme_is_stoc_2989f2_idx_and_more.py  0007_remove_dailymetrics_lost_sales.py  0008_product_is_internet_product_is_live.py
app/templates/: base.html
app/templatetags/: commons.py
app/tests/: test_helpers.py  test_models.py
app/views/: product_views.py  static_views.py
core/: settings.py
static/css/: custom.css  slick-theme.css  slick.css  tailwind-local.css  tippy.css
static/js/: chart.min.js  multiselect.js  sparkline_chart.js
stock_predictor/: apps.py
stock_predictor/static_src/: package-lock.json  package.json
tailwind/: apps.py
(+11 files in other folders)
