[build-system]
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["*Test*", "*TestCase"]
python_functions = ["test_*"]
testpaths = ["apps/inventory"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--reuse-db",
    "--nomigrations",
]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
    "ignore::DeprecationWarning",
]
markers = [
    "django_db: mark test to use django database",
]
collect_ignore = ["migrations"]
minversion = "6.0"

[tool.pylint.main]
load-plugins = ["pylint_django"]

[tool.pylint.django]
django-settings-module = "core.settings"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring", 
    "missing-function-docstring",
    "no-member",  # Disable no-member for Django model fields
    "too-few-public-methods",
    "import-error",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-locals = 20
